--- a/member.html
+++ b/member.html
@@ -67,59 +67,165 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">About Us
-                    <small>It's Nice to Meet You!</small>
+                    <small> <i> It's Nice to Meet You! </i> </small>
                 </h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, explicabo dolores ipsam aliquam inventore corrupti eveniet quisquam quod totam laudantium repudiandae obcaecati ea consectetur debitis velit facere nisi expedita vel?</p>
+                <p></p>
             </div>
         </div>
 
         <!-- Team Members Row -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Our Team</h2>
+                <h2 class="page-header"> DIRECTION:</h2>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <img class="img-circle img-responsive img-center" src="img_member/remy-150x150.jpg" alt="">
+                <h3>Remy Mullot </h3>
+                <p>
+                    <i> Professor, University of La Rochelle, France </i>
+                </p>
+                <h3> <small>Director & Senior Researcher </small> </h3>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <img class="img-circle img-responsive img-center" src="img_member/mailc-150x150.jpg" alt="">
+                <h3>Luong Chi Mai </h3>
+                <p>
+                    <i> Associate Professor, IOIT, VAST </i>
+                </p>
+                <h3> <small>Co-Director & Senior Researcher</small> </h3>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <img class="img-circle img-responsive img-center" src="img_member/alexis-150x150.jpg" alt="">
+                <h3>Alexis Drogoul </h3>
+                <p>
+                    <i> Research Director, IRD </i>
+                </p>
+                <h3> <small>Co-Director & Senior Researcher</small> </h3>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <img class="img-circle img-responsive img-center" src="img_member/vinh-150x150.jpg" alt="">
+                <h3>Ho Tuong Vinh </h3>
+                <p>
+                    <i> Research Director, IFI-MSI </i>
+                </p>
+                <h3> <small>Co-Director & Senior Researcher</small> </h3>
             </div>
+
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <img class="img-circle img-responsive img-center" src="img_member/jean-daniel-150x150.jpeg" alt="">
+                <h3>Jean-Daniel Zucker </h3>
+                <p>
+                    <i> Research Director, UMI UMMISCO </i>
+                </p>
+                <h3> <small>Senior Researcher</small> </h3>
             </div>
+            
             <div class="col-lg-4 col-sm-6 text-center">
-                <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
-                <h3>John Smith
-                    <small>Job Title</small>
-                </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <img class="img-circle img-responsive img-center" src="img_member/muriel-150x150.jpg" alt="">
+                <h3>Muriel Visani</h3>
+                <p>
+                    <i> Associate Professor, University of La Rochelle, France </i>
+                </p>
+                <h3> <small>Senior Researcher</small> </h3>
             </div>
+
+            <div class="col-lg-12">
+                <h2 class="page-header"> SECRETARIAT:</h2>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/tu-150x150.jpg" alt="">
+                <h3>Phung Thi Thanh Tu</h3>
+                <p>
+                    <i> </i>
+                </p>
+                <h3> <small>Academic & Research Assistant</small> </h3>
+            </div>
+
+            <div class="col-lg-12">
+                <h2 class="page-header"> LECTURERS:</h2>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/quang-142x150.jpg" alt="">
+                <h3>Doan Nhat Quang</h3>
+                <p>
+                    <i> Ph.D. in Computer Science </i>
+                </p>
+                <h3> <small></small> </h3>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/son-150x150.png" alt="">
+                <h3>Tran Giang Son</h3>
+                <p>
+                    <i> Ph.D. in Computer Science </i>
+                </p>
+                <h3> <small></small> </h3>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/phuong-150x150.jpg" alt="">
+                <h3>Nghiem Thi Phuong</h3>
+                <p>
+                    <i> Ph.D. in Computer Science </i>
+                </p>
+                <h3> <small></small> </h3>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/tung-150x150.jpg" alt="">
+                <h3>Tran Hoang Tung</h3>
+                <p>
+                    <i> Ph.D. in Computer Science </i>
+                </p>
+                <h3> <small></small> </h3>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/tuan-150x150.jpg" alt="">
+                <h3>Giang Anh Tuan</h3>
+                <p>
+                    <i> Ph.D. in Computer Science </i>
+                </p>
+                <h3> <small></small> </h3>
+            </div>
+
+            <div class="col-lg-12">
+                <h2 class="page-header"> INVITED RESEARCHER:</h2>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/bruno-150x150.png" alt="">
+                <h3>Bruno Lescalier </h3>
+                <p>
+                    <i> Senior Researcher, Laboratory L3i, University of La Rochelle, France </i>
+                </p>
+                <h3> <small>Invited researcher</small> </h3>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/Julien-150x150.jpg" alt="">
+                <h3>Julien Mazars</h3>
+                <p>
+                    <i> Senior Researcher, IRD </i>
+                </p>
+                <h3> <small>Invited researcher</small> </h3>
+            </div>
+
+            <div class="col-lg-4 col-sm-6 text-center">
+                <img class="img-circle img-responsive img-center" src="img_member/hobichhai-150x150.png" alt="">
+                <h3>Ho Bich Hai</h3>
+                <p>
+                    <i> Researcher, IOIT </i>
+                </p>
+                <h3> <small>Invited researcher</small> </h3>
+            </div>
+
         </div>
 
         <hr>
