--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">Contact
-                    <small>Subheading</small>
+                    <!-- <small>Subheading</small> -->
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
@@ -140,26 +140,31 @@
             <!-- Map Column -->
             <div class="col-md-8">
                 <!-- Embedded Google Map -->
-                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+                <!-- <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe> -->
+
+                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=21.048111,105.801339&amp;spn=21.048111,105.801339&amp;t=m&amp;z=4&amp;output=embed"></iframe>
+
+                
             </div>
             <!-- Contact Details Column -->
             <div class="col-md-4">
                 <h3>Contact Details</h3>
                 <p>
-                    3481 Melrose Place<br>Beverly Hills, CA 90210<br>
+                    USTH ICTLAB Research Laboratory<br>5th Floor, Education and Services Building<br>18 Hoang Quoc Viet, CauGiay, Hanoi<br>
                 </p>
-                <p><i class="fa fa-phone"></i> 
-                    <abbr title="Phone">P</abbr>: (123) 456-7890</p>
+                <!-- <p><i class="fa fa-phone"></i> 
+                    <abbr title="Phone">P</abbr>: (123) 456-7890</p> -->
+                <p> <b>Assistant:</b> Ms Phung Thi Thanh Tu </p>    
                 <p><i class="fa fa-envelope-o"></i> 
-                    <abbr title="Email">E</abbr>: <a href="mailto:name@example.com">name@example.com</a>
+                    <abbr title="Email">E</abbr>: <a href="mailto:phung-thi-thanh.tu@usth.edu.vn">phung-thi-thanh.tu@usth.edu.vn</a>
                 </p>
-                <p><i class="fa fa-clock-o"></i> 
-                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
+                <!-- <p><i class="fa fa-clock-o"></i> 
+                    <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p> -->
                 <ul class="list-unstyled list-inline list-social-icons">
                     <li>
-                        <a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
+                        <a href="https://www.facebook.com/groups/ict.usth/?fref=nf"><i class="fa fa-facebook-square fa-2x"></i></a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="#"><i class="fa fa-linkedin-square fa-2x"></i></a>
                     </li>
                     <li>
@@ -167,7 +172,7 @@
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-google-plus-square fa-2x"></i></a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
@@ -219,7 +224,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Copyright &copy; WebApp 2016</p>
                 </div>
             </div>
         </footer>
