--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <h1 class="page-header">About
-                    <small>Subheading</small>
+                    <!-- <small>Subheading</small> -->
                 </h1>
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a>
@@ -138,19 +138,31 @@
         <!-- Intro Content -->
         <div class="row">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                <img class="img-responsive" src="img_about/ICTlab.jpg" alt="">
             </div>
             <div class="col-md-6">
-                <h2>About Modern Business</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem perferendis dicta dolorem non blanditiis ex fugiat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, magni, aperiam vitae illum voluptatum aut sequi impedit non velit ab ea pariatur sint quidem corporis eveniet. Odit, temporibus reprehenderit dolorum!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis?</p>
+                <h2>About ICTLab</h2>
+                <p>ICTLab is a joint international ICT research laboratory between USTH and Vietnamese and French partners. It involves researchers coming from USTH, IOIT (Institute of Information Technology, Hanoï), IRD (Institut de Recherche pour le Développement) and the University of La Rochelle, France.</p>
+
+                <h3> History </h3>
+                <p>ICTLab was created on December 1st, 2014. Its creation was supported (directly or indirectly) by USTH, the French Embassy in Vietnam, 13 French high education institutes and universities (USTH Consortium), and the ADB (Asian Development Bank).</p>
+
+                <div class="col-lg-12">
+                <h3 class="page-header">Facilities</h3>
+                </div>
+                <p> The laboratory is located in the heart of the VAST (Vietnamese Academy of Science and Technology) complex, in the city center of Hanoï, Vietnam. </p>
+                <p> Hereafter a few pictures of our facilities. </p>
+                 <!-- <div class="col-md-2 col-sm-4 col-xs-6"> -->
+                <div>
+                    <img class="img-responsive customer-img" src="img_about/facilities.jpg" alt="">
+                </div>
+
             </div>
         </div>
         <!-- /.row -->
 
         <!-- Team Members -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Our Team</h2>
             </div>
@@ -268,15 +280,14 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <!-- Our Customers -->
         <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header">Our Customers</h2>
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
+
+
+            <!-- <div class="col-md-2 col-sm-4 col-xs-6">
                 <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
@@ -290,10 +301,7 @@
             </div>
             <div class="col-md-2 col-sm-4 col-xs-6">
                 <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
-            <div class="col-md-2 col-sm-4 col-xs-6">
-                <img class="img-responsive customer-img" src="http://placehold.it/500x300" alt="">
-            </div>
+            </div> -->
         </div>
         <!-- /.row -->
 
