--- a/about.html
+++ b/about.html
@@ -147,9 +147,7 @@
                 <h3> History </h3>
                 <p>ICTLab was created on December 1st, 2014. Its creation was supported (directly or indirectly) by USTH, the French Embassy in Vietnam, 13 French high education institutes and universities (USTH Consortium), and the ADB (Asian Development Bank).</p>
 
-                <div class="col-lg-12">
-                <h3 class="page-header">Facilities</h3>
-                </div>
+                <h3>Facilities</h3>
                 <p> The laboratory is located in the heart of the VAST (Vietnamese Academy of Science and Technology) complex, in the city center of Hanoï, Vietnam. </p>
                 <p> Hereafter a few pictures of our facilities. </p>
                  <!-- <div class="col-md-2 col-sm-4 col-xs-6"> -->
