Reformat about page, center image

--- a/about.html
+++ b/about.html
@@ -137,24 +137,19 @@
 
         <!-- Intro Content -->
         <div class="row">
-            <div class="col-md-6">
-                <img class="img-responsive" src="img_about/ICTlab.jpg" alt="">
-            </div>
-            <div class="col-md-6">
-                <h2>About ICTLab</h2>
-                <p>ICTLab is a joint international ICT research laboratory between USTH and Vietnamese and French partners. It involves researchers coming from USTH, IOIT (Institute of Information Technology, Hanoï), IRD (Institut de Recherche pour le Développement) and the University of La Rochelle, France.</p>
+            <img class="img-responsive img-rounded center-block" src="img_about/ICTlab.jpg" alt="">
+            <h2>About ICTLab</h2>
+            <p>ICTLab is a joint international ICT research laboratory between USTH and Vietnamese and French partners. It involves researchers coming from USTH, IOIT (Institute of Information Technology, Hanoï), IRD (Institut de Recherche pour le Développement) and the University of La Rochelle, France.</p>
 
-                <h3> History </h3>
-                <p>ICTLab was created on December 1st, 2014. Its creation was supported (directly or indirectly) by USTH, the French Embassy in Vietnam, 13 French high education institutes and universities (USTH Consortium), and the ADB (Asian Development Bank).</p>
+            <h3> History </h3>
+            <p>ICTLab was created on December 1st, 2014. Its creation was supported (directly or indirectly) by USTH, the French Embassy in Vietnam, 13 French high education institutes and universities (USTH Consortium), and the ADB (Asian Development Bank).</p>
 
-                <h3>Facilities</h3>
-                <p> The laboratory is located in the heart of the VAST (Vietnamese Academy of Science and Technology) complex, in the city center of Hanoï, Vietnam. </p>
-                <p> Hereafter a few pictures of our facilities. </p>
-                 <!-- <div class="col-md-2 col-sm-4 col-xs-6"> -->
-                <div>
-                    <img class="img-responsive customer-img" src="img_about/facilities.jpg" alt="">
-                </div>
-
+            <h3>Facilities</h3>
+            <p> The laboratory is located in the heart of the VAST (Vietnamese Academy of Science and Technology) complex, in the city center of Hanoï, Vietnam. </p>
+            <p> Hereafter a few pictures of our facilities. </p>
+             <!-- <div class="col-md-2 col-sm-4 col-xs-6"> -->
+            <div>
+                <img class="img-responsive customer-img" src="img_about/facilities.jpg" alt="">
             </div>
         </div>
         <!-- /.row -->
