--- a/contact.html
+++ b/contact.html
@@ -142,8 +142,7 @@
                 <!-- Embedded Google Map -->
                 <!-- <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe> -->
 
-                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=21.048111,105.801339&amp;spn=21.048111,105.801339&amp;t=m&amp;z=4&amp;output=embed"></iframe>
-
+                <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?q=Trường+Đại+học+Khoa+học+và+Công+nghệ+Hà+Nội,+Nghĩa+Đô,+Hanoi,+Vietnam&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe>
                 
             </div>
             <!-- Contact Details Column -->
