--- a/item_new_2.html
+++ b/item_new_2.html
@@ -154,7 +154,9 @@
                     <p>The internships will be hosted by the ICT lab of USTH. Candidates will be selected according to their academical and programming skills as well as the adequation of their profile with the subject. The selected students may get some extract supporting salary depending on the particular policy of each project.</p>
                     <p> <strong> The detail of the 5 internship subjects can be found in the following links: </strong> </p>
                     <p style="color:red"> Topic 1: Android application development for image, voice and text acquisitions </p> 
-                </div>
+                    <p style="color:red">Topic 2: Nonparametric method for image analysis </p>
+                    <p style="color:red">Topic 3: Deep learning for image analysis – application to dengue fever risky sites monitoring </p>
+                    <p style="color:red">Topic 4: Hidden Markov Model (HMM) for automatic speech recognition (ASR) with special name entities for dengue fever risky sites monitoring </p>
             </div>
 
         </div>
