--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Research Projects <b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a href="#">SWARMS Project</a>
+                                <a href="swarms.html">SWARMS Project</a>
                             </li>
                             <li>
-                                <a href="#">ARCHIVES Project</a>
+                                <a href="archives.html">ARCHIVES Project</a>
                             </li>
                         </ul>
                     </li>
